# Neko

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
